--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,3 @@
-/*
-  Theme Name: Name - Multipurpose HTML Template
-  Author: 
-  Support: admin@gmail.com
-  Description: Creative  HTML5 template.
-  Version: 1.0
-*/
-
-/* CSS Index 
------------------------------------
-1. Theme default css
-2. header
-3. slider
-4. about-area
-5. features-box
-6. department
-7. team
-8. video-area
-9. counter
-10. footer 
-*/
-
-
-
-/* 1. Theme default css */
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,500,600,700|Poppins:300,400,500,600,700');
  body {
 	font-family: 'Poppins', sans-serif;
@@ -36,7 +11,6 @@ ul {
 	margin-top: 40px !important;
 }
 
-/* font-family: 'Oswald', sans-serif; */
 .img {
 	max-width: 100%;
 	transition: all 0.3s ease-out 0s;
@@ -694,6 +668,7 @@ div.owl-nav::before {
     align-items: center;
     display: flex;
     height: 420px;
+    opacity: 0.8;
 }
 
 /* banner section */
